# Cybersafe

./: .gitignore
app/: main.py
app/scanner/: headers_checker.py  methods_checker.py  tls_checker.py
app/utils/: scoring.py
cybersafe/: README.md  pyproject.toml  requirements.txt
cybersafe/app/: config.py  ui.py
cybersafe/app/scanner/: cors_checker.py  ports_checker.py
cybersafe/app/utils/: caching.py  reports.py
cybersafe/tests/: test_headers.py  test_scoring.py  test_tls.py
docker/: Dockerfile  docker-compose.yml
tests/: test_consent_gate.py  test_cors.py  test_ports.py
